{{$NEXT}}

0.021     2016-02-15 01:58:40 EST
  - Lower dependency on DBI to 1.627
  - Remove dependency on URI::QueryParam

0.020     2016-02-14 17:53:55 EST
  - Bump dependency on DBD::SQLite to 1.50 for JSON1 extension support
  - Add support for json parameters to query method in Mojo::SQLite::Database
  - Add expand method to Mojo::SQLite::Results to decode json columns
  - Add auto_migrate attribute to Mojo::SQLite (from Mojo::Pg)
  - Add tables method to Mojo::SQLite::Database (from Mojo::Pg)

0.019     2015-11-25 22:45:25 EST
  - Added support for removing all subscribers of a channel at once in unlisten
    method in Mojo::SQLite::PubSub
  - Mojo::SQLite::Migrations now throws an error if the currently active
    version is greater than the latest version
  - Added finish method to Mojo::SQLite::Results

0.018     2015-09-21 13:44:30 EDT
  - Fixes for tests under win32

0.017     2015-09-20 17:24:44 EDT
  - Fix parsing of options from connection strings
  - Allow passing a hashref of options in from_filename

0.016     2015-09-20 16:51:53 EDT
  - Use URI::db to parse connection strings to allow sqlite: connection strings

0.015     2015-09-12 00:13:53 EDT
  - Minor pubsub fixes

0.014     2015-09-11 20:25:25 EDT
  - Add Mojo::SQLite::PubSub and listen/notify implementation in Mojo::SQLite::Database

0.013     2015-09-02 02:44:36 EDT
  - Cache rowid for successful inserts in Results objects as last_insert_id

0.012     2015-08-31 18:26:47 EDT
  - Include better context for DB error messages from $db->query and migrations
  - Switch installer to Module::Build::Tiny

0.011     2015-08-13 20:43:37 EDT
  - Simplify Results refcounting
  - Pass undef instead of broken Results object to callback if statement
    prepare failed

0.010     2015-08-08 22:50:06 EDT
  - Create a tempdir for temporary databases
  - Use immediate locking for migrations instead of exclusive
  - Run query callbacks using next_tick instead of immediately