@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Improve expand performance slightly.
 
 0.021     2016-02-15 01:58:40 EST
   - Lower dependency on DBI to 1.627
